--- a/WEB/src/app/public/login/login.component.html
+++ b/WEB/src/app/public/login/login.component.html
@@ -1,20 +1,51 @@
-<mat-card class="example-card">
-  <mat-card-header>
-    <mat-card-title>Login</mat-card-title>
-  </mat-card-header>
-  <form class="example-form">
-    <mat-form-field appearance="outline" class="example-full-width">
-      <mat-label>Username</mat-label>
-      <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
-    </mat-form-field>
-    <mat-form-field appearance="outline" class="example-full-width">
-      <mat-label>Password</mat-label>
-      <input matInput placeholder="Password" [(ngModel)]="password" type="password" name="password" required>
-    </mat-form-field>
-    <mat-card-actions>
-      <button mat-raised-button (click)="login()" color="primary">Login</button>
-    </mat-card-actions>
-  </form>
+<div class="container">
+	<div class="d-flex justify-content-center h-100">
+		
+		<div class="card-container">
+			<div class="login-conetnt">
+			<div class="card-header">
+				<h3>Sign In</h3>
+				<div class="d-flex justify-content-end social_icon">
+					<span><i class="fab fa-facebook-square"></i></span>
+					<span><i class="fab fa-google-plus-square"></i></span>
+					<span><i class="fab fa-twitter-square"></i></span>
+				</div>
+			</div>
+			<div class="card-body">
+				<form>
+					<div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fas fa-user"></i></span>
+						</div>
+						<input  class="form-control" matInput placeholder="Username" [(ngModel)]="username" required>
+						
+					</div>
+					<div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fas fa-key"></i></span>
+						</div>
+						<input matInput type="password" class="form-control" placeholder="password" [(ngModel)]="password" name="password" required>
+					</div>
+					<div class="row align-items-center remember">
+						<input type="checkbox">Remember Me
+					</div>
+					<div class="form-group">
+						<button class="btn float-right login_btn" (click)="login()">Login</button>
+					</div>
+				</form>
+			</div>
+			<div class="card-footer">
+				<div class="d-flex justify-content-center links">
+					Don't have an account?<a href="" (click)="registerUser()">Sign Up</a>
+				</div>
+				<div class="d-flex justify-content-center">
+					<a href="#">Forgot your password?</a>
+				</div>
+			</div>
+		</div>
+			
 
-  <button mat-raised-button (click)="registerUser()" color="primary">Register User</button> 
-</mat-card>
+    	</div>
+
+	</div>
+</div>
